# ProstateDynaCatConvert

./: README.md  pyproject.toml
.github/: release.yaml
.github/workflows/: release.yaml
src/: ProstateDynaCatConvert  ProstateDynaCatConvert.py  contours2nii.py  convert_all.py  reading.py  transformation.py  utils.py
