[tool.poetry]
name = "xml2nii"
version = "0.0.1"
description = "comming soon"
authors = ["Karl Ludger Radke"]
license = "GNU GENERAL PUBLIC LICENSE Version 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydicom = "^2.4.3"
numpy = "^1.26.2"
nibabel = "^5.1.0"
click = "^8.1.7"
matplotlib = "^3.8.2"
pillow = "^10.1.0"
simpleitk = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
